<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myLayout"
    android:stretchColumns="0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_x="110dp"
        android:layout_y="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_id"
        android:layout_x="30dp"
        android:layout_y="50dp"/>
    <EditText
        android:id="@+id/editEmpId"
        android:inputType="number"
        android:layout_x="150dp"
        android:layout_y="50dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_x="30dp"
        android:layout_y="100dp"/>
    <EditText
        android:id="@+id/editName"
        android:inputType="text"
        android:layout_x="150dp"
        android:layout_y="100dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salary"
        android:layout_x="30dp"
        android:layout_y="150dp"/>
    <EditText
        android:id="@+id/editSalary"
        android:inputType="text"
        android:layout_x="150dp"
        android:layout_y="150dp"
        android:layout_width="150dp"
        android:layout_height="40dp"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:id="@+id/btnAdd"
        android:text="@string/add"
        android:layout_x="30dp"
        android:layout_y="200dp"/>
    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:layout_x="160dp"
        android:layout_y="200dp"/>
    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:id="@+id/btnModify"
        android:text="@string/modify"
        android:layout_x="30dp"
        android:layout_y="250dp"/>
    <Button
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:id="@+id/btnView"
        android:text="@string/view"
        android:layout_x="160dp"
        android:layout_y="250dp"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/btnViewAll"
        android:text="@string/view_all"
        android:layout_x="85dp"
        android:layout_y="300dp"/>
</AbsoluteLayout>